--- a/.distignore
+++ b/.distignore
@@ -1,21 +1,21 @@
 /.*
 /.github/*
-/README.md
+/*.md
 /codeception.dist.yml
 /composer.json
 /composer.lock
 /dist-archive
+/node_modules
+/package.json
+/package-lock.json
 /phpcs.xml
 /phpstan.neon
 /phpstanbootstrap.php
+/README.md
 /scratch
+/src
 /tests
 /vendor
 /wordpress
 /wp-cli.yml
 /wp-content
-node_modules
-/*.md
-/package.json
-/package-lock.json
-/src
