--- a/composer.json
+++ b/composer.json
@@ -17,31 +17,17 @@
       "composer/installers": true,
       "phpstan/extension-installer": true,
       "dealerdirect/phpcodesniffer-composer-installer": true,
-      "johnpbloch/wordpress-core-installer": true
+      "johnpbloch/wordpress-core-installer": true,
+      "brianhenryie/composer-prefer-local": true,
+      "brianhenryie/composer-fallback-to-git": true
     },
     "platform": {
-      "php": "8.0"
+      "php": "8.0.2"
     },
     "process-timeout": 0,
     "sort-packages": true
   },
   "repositories":{
-    "brianhenryie/bh-wc-logger": {
-      "url": "../bh-wc-logger",
-      "type": "path"
-    },
-    "brianhenryie/bh-wp-logger": {
-      "url": "../bh-wp-logger",
-      "type": "path"
-    },
-    "brianhenryie/bh-wp-private-uploads": {
-      "type": "path",
-      "url": "../bh-wp-private-uploads"
-    },
-    "brianhenryie/composer-phpstorm": {
-      "url": "https://github.com/BrianHenryIE/composer-phpstorm",
-      "type": "git"
-    },
     "outlandishideas/wpackagist": {
       "type": "composer",
       "url": "https://wpackagist.org"
@@ -49,26 +35,15 @@
     "wordpress/wordpress": {
       "url": "https://github.com/WordPress/wordpress-develop",
       "type": "git"
-    },
-    "brianhenryie/bh-wc-order-email-reconcile":{
-      "type": "path",
-      "url":  "../bh-wc-order-email-reconcile/"
-    },
-    "brianhenryie/bh-wp-mailboxes":{
-      "type": "path",
-      "url":  "../bh-wp-mailboxes/"
-    },
-    "brianhenryie/bh-wp-plugin-meta-kit":{
-      "type": "path",
-      "url":  "../bh-wp-plugin-meta-kit/"
     }
   },
   "require": {
     "php": ">=8.0",
     "alleyinteractive/wordpress-autoloader": "^1.1",
-    "brianhenryie/bh-wp-logger": "dev-master",
+    "brianhenryie/bh-wp-logger": "*",
     "brianhenryie/bh-wc-order-email-reconcile": "dev-master",
     "brianhenryie/bh-wp-plugin-meta-kit": "dev-main",
+    "brianhenryie/bh-wp-slswc-client": "dev-main",
     "chillerlan/php-qrcode": "^4.3",
     "lucatume/di52": "^3.3"
   },
@@ -76,7 +51,9 @@
     "10up/wp_mock": "^1.0",
     "antecedent/patchwork": "^2.1",
     "brianhenryie/color-logger": "^1.0",
+    "brianhenryie/composer-fallback-to-git": "*",
     "brianhenryie/composer-phpstorm": "dev-master",
+    "brianhenryie/composer-prefer-local": "^0.1.1",
     "brianhenryie/strauss": "*",
     "cweagans/composer-patches": "^1.7",
     "dealerdirect/phpcodesniffer-composer-installer": "*",
@@ -88,15 +65,15 @@
     "phpcompatibility/phpcompatibility-wp": "^2.1",
     "phpstan/extension-installer": "^1.1",
     "phpunit/phpcov": "*",
+    "symfony/cache": "^6.0",
     "szepeviktor/phpstan-wordpress": "*",
     "woocommerce/woocommerce-sniffs": "*",
     "wordpress/wordpress": "*",
-    "wp-cli/dist-archive-command": "dev-main",
+    "wp-cli/dist-archive-command": "*",
     "wp-cli/i18n-command": "^2.4",
     "wp-cli/wp-cli-bundle": "2.7.1",
     "wp-coding-standards/wpcs": "*",
     "wpackagist-plugin/woocommerce": "*",
-    "wpackagist-plugin/wp-mail-logging": "^1.10",
     "wpackagist-theme/storefront": "*"
   },
   "extra": {
@@ -112,6 +89,11 @@
       "namespace_prefix": "BrianHenryIE\\WC_Zelle_Gateway\\",
       "classmap_prefix": "BH_WC_Zelle_Gateway_",
       "exclude_from_copy": {
+        "packages": [
+          "google/apiclient",
+          "google/apiclient-services",
+          "google/auth"
+        ],
         "file_patterns": [
           "~psr/log/Psr/Log/Test.*~"
         ]
@@ -184,23 +166,6 @@
       "wp user create bob bob@example.org --user_pass=password || true;",
       "wp core update --allow-root || true",
       "mkdir -p wordpress/wp-content/uploads"
-    ],
-    "create-databases": [
-      "export $(grep -v '^#' .env.testing | xargs); [[ $(mysqld --version) =~ .*MariaDB.* ]] && mysql -e \"CREATE USER IF NOT EXISTS '\"$TEST_DB_USER\"'@'%' IDENTIFIED BY '\"$TEST_DB_PASSWORD\"';\" || mysql -e \"CREATE USER IF NOT EXISTS '\"$TEST_DB_USER\"'@'%' IDENTIFIED WITH mysql_native_password BY '\"$TEST_DB_PASSWORD\"';\";",
-      "export $(grep -v '^#' .env.testing | xargs); mysql -e \"CREATE DATABASE IF NOT EXISTS \"$TEST_SITE_DB_NAME\"; USE \"$TEST_SITE_DB_NAME\"; GRANT ALL PRIVILEGES ON \"$TEST_SITE_DB_NAME\".* TO '\"$TEST_DB_USER\"'@'%';\";",
-      "export $(grep -v '^#' .env.testing | xargs); mysql -e \"CREATE DATABASE IF NOT EXISTS \"$TEST_DB_NAME\"; USE \"$TEST_DB_NAME\"; GRANT ALL PRIVILEGES ON \"$TEST_DB_NAME\".* TO '\"$TEST_DB_USER\"'@'%';\";",
-      "@restore-acceptance-database"
-    ],
-    "delete-databases": [
-      "export $(grep -v '^#' .env.testing | xargs); mysql -e \"DROP TABLE IF EXISTS $TEST_SITE_DB_NAME;\" mysql -e \"DROP TABLE IF EXISTS $TEST_DB_NAME;\"",
-      "export $(grep -v '^#' .env.testing | xargs); DB_DIR=$(mysql -e \"select @@datadir\" -N -B); rm -rf $DB_DIR$TEST_SITE_DB_NAME; rm -rf  $DB_DIR$TEST_DB_NAME;",
-      "mysql -e \"FLUSH TABLES;\""
-    ],
-    "save-acceptance-database": [
-      "export $(grep -v '^#' .env.testing | xargs); mysqldump -u $TEST_SITE_DB_USER -p$TEST_SITE_DB_PASSWORD  $TEST_SITE_DB_NAME > tests/_data/dump.sql;"
-    ],
-    "restore-acceptance-database": [
-      "export $(grep -v '^#' .env.testing | xargs); mysql $TEST_SITE_DB_NAME < tests/_data/dump.sql"
     ],
     "test-coverage": [
       "codecept run unit --coverage unit.cov",
