Setup wp-env / playwright

--- a/.distignore
+++ b/.distignore
@@ -1,17 +1,19 @@
+/*.md
 /.*
 /.github/*
-/*.md
+/CHANGELOG.md
+/CONTRIBUTING.md
+/README.md
 /codeception.dist.yml
 /composer.json
 /composer.lock
 /dist-archive
 /node_modules
-/package.json
 /package-lock.json
+/package.json
 /phpcs.xml
 /phpstan.neon
 /phpstanbootstrap.php
-/README.md
 /scratch
 /src
 /tests
